js/html improvements

--- a/css/defaults/main.css
+++ b/css/defaults/main.css
@@ -132,12 +132,12 @@ textarea {
 }
 
 .section-4 {
-  background-color: #fdb237;
+  background-color: #fcd966;
 }
 
 .section-4 .section-btn:focus,
 .section-4 .section-btn:hover {
-  color: #fdb237;
+  color: #fcd966;
 }
 
 .section-btn {
