--- a/css/defaults/main.css
+++ b/css/defaults/main.css
@@ -1,57 +1,58 @@
 /*! HTML5 Boilerplate v5.3.0 | MIT License | https://html5boilerplate.com/ */
 
 /*
- * What follows is the result of much research on cross-browser styling.
- * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
- * Kroc Camen, and the H5BP dev community and team.
- */
+* What follows is the result of much research on cross-browser styling.
+* Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
+* Kroc Camen, and the H5BP dev community and team.
+*/
 
 /* ==========================================================================
-   Base styles: opinionated defaults
-   ========================================================================== */
+Base styles: opinionated defaults
+========================================================================== */
 
 html {
-    color: #222;
-    font-size: 1em;
-    line-height: 1.4;
+  color: #222;
+  font-family: 'Cabin', sans-serif;
+  font-size: 1em;
+  line-height: 1.4;
 }
 
 /*
- * Remove text-shadow in selection highlight:
- * https://twitter.com/miketaylr/status/12228805301
- *
- * These selection rule sets have to be separate.
- * Customize the background color to match your design.
- */
+* Remove text-shadow in selection highlight:
+* https://twitter.com/miketaylr/status/12228805301
+*
+* These selection rule sets have to be separate.
+* Customize the background color to match your design.
+*/
 
 ::-moz-selection {
-    background: #b3d4fc;
-    text-shadow: none;
+  background: #b3d4fc;
+  text-shadow: none;
 }
 
 ::selection {
-    background: #b3d4fc;
-    text-shadow: none;
+  background: #b3d4fc;
+  text-shadow: none;
 }
 
 /*
- * A better looking default horizontal rule
- */
+* A better looking default horizontal rule
+*/
 
 hr {
-    display: block;
-    height: 1px;
-    border: 0;
-    border-top: 1px solid #ccc;
-    margin: 1em 0;
-    padding: 0;
+  display: block;
+  height: 1px;
+  border: 0;
+  border-top: 1px solid #ccc;
+  margin: 1em 0;
+  padding: 0;
 }
 
 /*
- * Remove the gap between audio, canvas, iframes,
- * images, videos and the bottom of their containers:
- * https://github.com/h5bp/html5-boilerplate/issues/440
- */
+* Remove the gap between audio, canvas, iframes,
+* images, videos and the bottom of their containers:
+* https://github.com/h5bp/html5-boilerplate/issues/440
+*/
 
 audio,
 canvas,
@@ -59,269 +60,427 @@ iframe,
 img,
 svg,
 video {
-    vertical-align: middle;
+  vertical-align: middle;
 }
 
 /*
- * Remove default fieldset styles.
- */
+* Remove default fieldset styles.
+*/
 
 fieldset {
-    border: 0;
-    margin: 0;
-    padding: 0;
+  border: 0;
+  margin: 0;
+  padding: 0;
 }
 
 /*
- * Allow only vertical resizing of textareas.
- */
+* Allow only vertical resizing of textareas.
+*/
 
 textarea {
-    resize: vertical;
+  resize: vertical;
 }
 
 /* ==========================================================================
-   Browser Upgrade Prompt
-   ========================================================================== */
+Browser Upgrade Prompt
+========================================================================== */
 
 .browserupgrade {
-    margin: 0.2em 0;
-    background: #ccc;
-    color: #000;
-    padding: 0.2em 0;
+  margin: 0.2em 0;
+  background: #ccc;
+  color: #000;
+  padding: 0.2em 0;
 }
 
 /* ==========================================================================
-   Author's custom styles
-   ========================================================================== */
+Author's custom styles
+========================================================================== */
 
-.section-1,
-.section-2,
-.section-3,
-.section-4 {
-  padding-bottom: 50vh;
-  padding-top: 50vh;
+.section {
+  background-color: #1bbc9d;
+  box-sizing: border-box;
+  display: table;
+  min-height: 100vh;
+  position: relative;
   text-align: center;
+  width: 100%;
 }
 
-.section-1 {
-  background-color: #add591;
+/* Second slide */
+.section:nth-child(3) {
+  background-color: #e84c3d;
 }
 
-.section-1 .section-btn:focus,
-.section-1 .section-btn:hover {
-  color: #add591;
+.section:nth-child(3) .section-btn {
+  background-color: #e84c3d;
 }
 
-.section-2 {
-  background-color: #ec4f48;
+.section:nth-child(3) .section-btn:focus,
+.section:nth-child(3) .section-btn:hover {
+  background-color: #fff;
+  color: #e84c3d;
 }
 
-.section-2 .section-btn:focus,
-.section-2 .section-btn:hover {
-  color: #ec4f48;
+.section:nth-child(3) .section-pre {
+  background-color: #c1392b;
 }
 
-.section-3 {
-  background-color: #70d6df;
+/* Third slide */
+.section:nth-child(4) {
+  background-color: #3598dc;
 }
 
-.section-3 .section-btn:focus,
-.section-3 .section-btn:hover {
-  color: #70d6df;
+.section:nth-child(4) .section-btn {
+  background-color: #3598dc;
 }
 
-.section-4 {
-  background-color: #fcd966;
+.section:nth-child(4) .section-btn:focus,
+.section:nth-child(4) .section-btn:hover {
+  background-color: #fff;
+  color: #3598dc;
 }
 
-.section-4 .section-btn:focus,
-.section-4 .section-btn:hover {
-  color: #fcd966;
+.section:nth-child(4) .section-pre {
+  background-color: #2a80b9;
+}
+
+/* Fourth slide */
+.section:nth-child(5) {
+  background-color: #f1c40f;
+}
+
+.section:nth-child(5) .section-btn {
+  background-color: #f1c40f;
+}
+
+.section:nth-child(5) .section-btn:focus,
+.section:nth-child(5) .section-btn:hover {
+  background-color: #fff;
+  color: #f1c40f;
+}
+
+.section:nth-child(5) .section-pre {
+  background-color: #f49c14;
+}
+
+.section-anchor {
+  position: absolute;
+  top: -70px;
+}
+
+.header-inner {
+  box-sizing: border-box;
+  margin: 0 auto;
+  max-width: 100%;
+  padding: 0 15px;
+  position: relative;
+  width: 960px;
+}
+
+.section-inner {
+  display: table-cell;
+  padding-bottom: 100px;
+  padding-top: 100px;
+  text-align: center;
+  vertical-align: middle;
+}
+
+.section-content {
+  position: relative;
+  margin: 0 auto;
+  width: 500px;
+}
+
+.section-headline {
+  color: #fff;
+  font-size: 24px;
+  font-weight: bold;
+  margin: 0 auto 25px;
+  text-transform: uppercase;
+}
+
+.section-text {
+  color: #fff;
+  font-size: 16px;
+  font-weight: normal;
+  margin: 0 auto 35px;
+}
+
+.section-text + .section-pre {
+  margin-top: 35px;
+}
+
+.section-code {
+  display: block;
+  padding: 15px 35px;
+  overflow: auto;
+}
+
+.section-code.inline {
+  background-color: #16a086;
+  color: #fff;
+  display: inline;
+  font-family: 'PT Mono', monospace;
+  font-size: 14px;
+  padding: 3px;
+}
+
+.section-pre {
+  background-color: #16a086;
+  color: #fff;
+  font-family: 'PT Mono', monospace;
+  font-size: 14px;
+  margin: 55px 0 0;
+  text-align: left;
+}
+
+.section-pre + .section-text {
+  margin-top: 55px;
 }
 
 .section-btn {
-  background-color: transparent;
-  border: 2px solid #fff;
-  border-radius: 3px;
+  background-color: #1bbc9d;
+  border: 3px solid #fff;
+  border-radius: 45px;
   color: #fff;
-  padding: 5px 15px;
-  -webkit-transition: all .2s linear;
-  transition: all 0.2s linear;
+  font-size: 24px;
+  font-weight: bold;
+  padding: 11px 30px 12px;
+  min-width: 260px;
+  -webkit-transition: all .4s linear;
+  transition: all .4s linear;
 }
 
 .section-btn:focus,
 .section-btn:hover {
   background-color: #fff;
+  color: #1bbc9d;
   outline: none;
 }
 
+.header {
+  background-color: #fff;
+  box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.15);
+  left: 0;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 100;
+}
+
+.header-inner {
+
+}
+
+.header-logo {
+  background-image: url('../../img/logo.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+  float: left;
+  height: 20px;
+  margin: 23px 0 27px;
+  width: 136px;
+}
+
+.header-menu {
+  float: right;
+}
+
+.nav {
+  padding-left: 0;
+  margin: 22px 0 26px;
+}
+
+.nav-item {
+  display: inline-block;
+  font-size: 16px;
+}
+
+.nav-link {
+  color: #666666;
+  font-size: 16px;
+  font-weight: bold;
+  text-decoration: none;
+  -webkit-transition: all .4s linear;
+  transition: all .4s linear;
+}
+
+.nav-link:focus,
+.nav-link:hover {
+  color: #b2b2b2;
+  text-decoration: none;
+}
+
+.nav-item + .nav-item {
+  margin-left: 85px;
+}
+
 /* ==========================================================================
-   Helper classes
-   ========================================================================== */
+Helper classes
+========================================================================== */
 
 /*
- * Hide visually and from screen readers
- */
+* Hide visually and from screen readers
+*/
 
 .hidden {
-    display: none !important;
+  display: none !important;
 }
 
 /*
- * Hide only visually, but have it available for screen readers:
- * http://snook.ca/archives/html_and_css/hiding-content-for-accessibility
- */
+* Hide only visually, but have it available for screen readers:
+* http://snook.ca/archives/html_and_css/hiding-content-for-accessibility
+*/
 
 .visuallyhidden {
-    border: 0;
-    clip: rect(0 0 0 0);
-    height: 1px;
-    margin: -1px;
-    overflow: hidden;
-    padding: 0;
-    position: absolute;
-    width: 1px;
+  border: 0;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
 }
 
 /*
- * Extends the .visuallyhidden class to allow the element
- * to be focusable when navigated to via the keyboard:
- * https://www.drupal.org/node/897638
- */
+* Extends the .visuallyhidden class to allow the element
+* to be focusable when navigated to via the keyboard:
+* https://www.drupal.org/node/897638
+*/
 
 .visuallyhidden.focusable:active,
 .visuallyhidden.focusable:focus {
-    clip: auto;
-    height: auto;
-    margin: 0;
-    overflow: visible;
-    position: static;
-    width: auto;
+  clip: auto;
+  height: auto;
+  margin: 0;
+  overflow: visible;
+  position: static;
+  width: auto;
 }
 
 /*
- * Hide visually and from screen readers, but maintain layout
- */
+* Hide visually and from screen readers, but maintain layout
+*/
 
 .invisible {
-    visibility: hidden;
+  visibility: hidden;
 }
 
 /*
- * Clearfix: contain floats
- *
- * For modern browsers
- * 1. The space content is one way to avoid an Opera bug when the
- *    `contenteditable` attribute is included anywhere else in the document.
- *    Otherwise it causes space to appear at the top and bottom of elements
- *    that receive the `clearfix` class.
- * 2. The use of `table` rather than `block` is only necessary if using
- *    `:before` to contain the top-margins of child elements.
- */
+* Clearfix: contain floats
+*
+* For modern browsers
+* 1. The space content is one way to avoid an Opera bug when the
+*    `contenteditable` attribute is included anywhere else in the document.
+*    Otherwise it causes space to appear at the top and bottom of elements
+*    that receive the `clearfix` class.
+* 2. The use of `table` rather than `block` is only necessary if using
+*    `:before` to contain the top-margins of child elements.
+*/
 
 .clearfix:before,
 .clearfix:after {
-    content: " "; /* 1 */
-    display: table; /* 2 */
+  content: " "; /* 1 */
+  display: table; /* 2 */
 }
 
 .clearfix:after {
-    clear: both;
+  clear: both;
 }
 
 /* ==========================================================================
-   EXAMPLE Media Queries for Responsive Design.
-   These examples override the primary ('mobile first') styles.
-   Modify as content requires.
-   ========================================================================== */
+EXAMPLE Media Queries for Responsive Design.
+These examples override the primary ('mobile first') styles.
+Modify as content requires.
+========================================================================== */
 
 @media only screen and (min-width: 35em) {
-    /* Style adjustments for viewports that meet the condition */
+  /* Style adjustments for viewports that meet the condition */
 }
 
 @media print,
-       (-webkit-min-device-pixel-ratio: 1.25),
-       (min-resolution: 1.25dppx),
-       (min-resolution: 120dpi) {
-    /* Style adjustments for high resolution devices */
+(-webkit-min-device-pixel-ratio: 1.25),
+(min-resolution: 1.25dppx),
+(min-resolution: 120dpi) {
+  /* Style adjustments for high resolution devices */
 }
 
 /* ==========================================================================
-   Print styles.
-   Inlined to avoid the additional HTTP request:
-   http://www.phpied.com/delay-loading-your-print-css/
-   ========================================================================== */
+Print styles.
+Inlined to avoid the additional HTTP request:
+http://www.phpied.com/delay-loading-your-print-css/
+========================================================================== */
 
 @media print {
-    *,
-    *:before,
-    *:after,
-    *:first-letter,
-    *:first-line {
-        background: transparent !important;
-        color: #000 !important; /* Black prints faster:
-                                   http://www.sanbeiji.com/archives/953 */
-        box-shadow: none !important;
-        text-shadow: none !important;
-    }
+  *,
+  *:before,
+  *:after,
+  *:first-letter,
+  *:first-line {
+    background: transparent !important;
+    color: #000 !important; /* Black prints faster:
+    http://www.sanbeiji.com/archives/953 */
+    box-shadow: none !important;
+    text-shadow: none !important;
+  }
 
-    a,
-    a:visited {
-        text-decoration: underline;
-    }
+  a,
+  a:visited {
+    text-decoration: underline;
+  }
 
-    a[href]:after {
-        content: " (" attr(href) ")";
-    }
+  a[href]:after {
+    content: " (" attr(href) ")";
+  }
 
-    abbr[title]:after {
-        content: " (" attr(title) ")";
-    }
+  abbr[title]:after {
+    content: " (" attr(title) ")";
+  }
 
-    /*
-     * Don't show links that are fragment identifiers,
-     * or use the `javascript:` pseudo protocol
-     */
+  /*
+  * Don't show links that are fragment identifiers,
+  * or use the `javascript:` pseudo protocol
+  */
 
-    a[href^="#"]:after,
-    a[href^="javascript:"]:after {
-        content: "";
-    }
+  a[href^="#"]:after,
+  a[href^="javascript:"]:after {
+    content: "";
+  }
 
-    pre,
-    blockquote {
-        border: 1px solid #999;
-        page-break-inside: avoid;
-    }
+  pre,
+  blockquote {
+    border: 1px solid #999;
+    page-break-inside: avoid;
+  }
 
-    /*
-     * Printing Tables:
-     * http://css-discuss.incutio.com/wiki/Printing_Tables
-     */
+  /*
+  * Printing Tables:
+  * http://css-discuss.incutio.com/wiki/Printing_Tables
+  */
 
-    thead {
-        display: table-header-group;
-    }
+  thead {
+    display: table-header-group;
+  }
 
-    tr,
-    img {
-        page-break-inside: avoid;
-    }
+  tr,
+  img {
+    page-break-inside: avoid;
+  }
 
-    img {
-        max-width: 100% !important;
-    }
+  img {
+    max-width: 100% !important;
+  }
 
-    p,
-    h2,
-    h3 {
-        orphans: 3;
-        widows: 3;
-    }
+  p,
+  h2,
+  h3 {
+    orphans: 3;
+    widows: 3;
+  }
 
-    h2,
-    h3 {
-        page-break-after: avoid;
-    }
+  h2,
+  h3 {
+    page-break-after: avoid;
+  }
 }
